--- a/draw_clouds/styles.css
+++ b/draw_clouds/styles.css
@@ -1,23 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Margarine&family=Mynerve&display=swap');
+
+body {
+  background: rgb(64, 84, 117);
+  background-image: url('img/icon-2.png');
+}
+
 main {
   width: 90%;
   margin: 0 auto;
+  color: white;
+}
+
+h1 {
+  /* margin: 0 auto; */
+  text-align: center;
+  font-family: "Margarine", sans-serif;
+  color: white;
+  font-size: 72px;
+  margin: 10px;
 }
 
 #cloud-canvas {
   /* background-color: lightblue; */
   width: 100%;
   height: 70vh;
-  border: 3px solid black;
+  border: 3px solid white;
+}
+
+#colors {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#colors button {
+  width: 50px;
+  height: 50px;
+  border-style: inset;
+  border: 0px solid black;
+}
+
+#toolbar button i {
+  font-size: 32px;
 }
 
 #toolbar {
   display: flex;
   flex-wrap: wrap;
+  row-gap: 15px;
+  column-gap: 15px;
+  margin: 10px 0;
+}
+.tools {
+  display: flex;
+  column-gap: 10px;
 }
 
-#toolbar button {
-  width: 50px;
+.tools button {
   height: 50px;
-  border-style: inset;
-  border: 0px solid black;
+  width: 50px;
+  background-color: white;
+  border: none;
+  border-radius: 5px;
 }
