--- a/drawonclouds/styles.css
+++ b/drawonclouds/styles.css
@@ -88,7 +88,8 @@ footer a:hover {
   background-color: rgb(56, 75, 137);
   box-shadow: 5px 5px 5px 5px rgb(62, 67, 101);
   font-size: 28px;
-    height: 45px;
+  height: 46px;
+  margin-top: -3px;
 }
 
 footer a img {
